# Linux_Shell

./: README.md
project-2-linux-shell-tup80439/: README.md  help.txt
project-2-linux-shell-tup80439/Shell_Root/: CMakeLists.txt  pipe1  pipe1.c  pipe2  pipe2.c
project-2-linux-shell-tup80439/Shell_Root/include/: built_in_functions.h  fileFunctions.h  helpers.h
project-2-linux-shell-tup80439/Shell_Root/src/: built_in_functions.c  fileFunctions.c  helpers.c  main.c
project-2-linux-shell-tup80439/notes/: notes_for_shell.txt  outline.txt
